--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ name: Publish to NPM
 on:
   push:
     branches: [main]
-    paths: "lib/fork-me/package.json"
+    paths: "lib/esbuild-plugin-react18-css/package.json"
 
 jobs:
   publish:
@@ -18,7 +18,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./lib/fork-me
+        working-directory: ./lib/esbuild-plugin-react18-css
 
     steps:
       - uses: actions/checkout@v4
