--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -1,10 +1,63 @@
 {
   "name": "esbuild-plugin-react18-css",
+  "author": "Mayank Kumar Chaudhari <https://mayank-chaudhari.vercel.app>",
+  "private": false,
+  "version": "0.0.0",
+  "description": "An intuitive React.js fork me ribbon component for promoting open source project forks.",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/react18-tools/esbuild-plugin-react18-css.git"
+  },
+  "bugs": {
+    "url": "https://github.com/react18-tools/esbuild-plugin-react18-css/issues"
+  },
+  "homepage": "https://github.com/react18-tools/esbuild-plugin-react18-css#readme",
+  "sideEffects": false,
+  "license": "MIT",
+  "scripts": {
+    "test": "vitest run --coverage",
+    "build": "tsup src && node touchup.js",
+    "doc": "cp -f ../../README.md README.md && typedoc",
+    "publish-package": "cd dist && npm publish --provenance --access public",
+    "lint": "eslint ."
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "postcss-modules": "^6.0.0"
+  },
+  "peerDependencies": {
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "postcss-modules": "^6.0.0"
+  },
   "devDependencies": {
     "@types/node": "^20.11.22",
     "@vitest/coverage-v8": "^1.3.1",
     "esbuild": "^0.20.2",
+    "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
-  }
+  },
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/mayank1513"
+  },
+  "keywords": [
+    "esbuild-plugin-css-module",
+    "esbuild-plugin",
+    "typescript",
+    "javascript",
+    "css-module",
+    "postcss",
+    "esbuild",
+    "react18",
+    "react",
+    "nextjs",
+    "tsup",
+    "css",
+    "mayank1513"
+  ]
 }
