--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -26,12 +26,14 @@
   "dependencies": {
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "postcss-modules": "^6.0.0"
+    "postcss-modules": "^6.0.0",
+    "sass": "^1.72.0"
   },
   "peerDependencies": {
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "postcss-modules": "^6.0.0"
+    "autoprefixer": "10",
+    "postcss": "8",
+    "postcss-modules": "6",
+    "sass": "1"
   },
   "devDependencies": {
     "@types/node": "^20.11.22",
