--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^20.11.22",
     "@vitest/coverage-v8": "^1.3.1",
     "esbuild": "^0.20.2",
+    "tiny-glob": "^0.2.9",
     "tsup": "^8.0.2",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
