--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -41,6 +41,7 @@
     "esbuild": "^0.20.2",
     "tiny-glob": "^0.2.9",
     "tsup": "^8.0.2",
+    "typedoc": "^0.25.9",
     "typescript": "^5.4.2",
     "vitest": "^1.3.1"
   },
