--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -7,8 +7,7 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "lint": "eslint .",
-    "doc": "node doc-featured.js"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@mayank1513/fork-me": "latest",
