--- a/packages/shared-ui/package.json
+++ b/packages/shared-ui/package.json
@@ -10,17 +10,17 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@mayank1513/fork-me": "latest",
+    "@mayank1513/fork-me": "^2.0.1",
+    "@types/node": "^20.11.28",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
     "esbuild-plugin-react18-css-example": "workspace:*",
-    "@types/node": "^20.11.22",
-    "@types/react": "^18.2.60",
-    "@types/react-dom": "^18.2.19",
     "eslint-config-custom": "workspace:*",
-    "next": "^14.1.0",
+    "next": "^14.1.3",
     "nextjs-themes": "^3.1.0",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
-    "typescript": "5.3.3"
+    "typescript": "5.4.2"
   },
   "dependencies": {
     "eslint": "^8.57.0"
