--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: 20
       - run: npm i -g pnpm && pnpm i
         name: Install dependencies
+      - name: Build examples
+        run: pnpm build --filter esbuild-plugin-react18-css-example
       - name: Run unit tests
         run: pnpm test
       - name: Upload coverage reports to Codecov
