--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -56,6 +56,7 @@
     "javascript",
     "autoprefixer",
     "css-module",
+    "scss-module",
     "postcss",
     "esbuild",
     "react18",
@@ -64,6 +65,7 @@
     "tsup",
     "css",
     "scss",
+    "sass",
     "mayank1513"
   ]
 }
