--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^20.11.28",
     "@vitest/coverage-v8": "^1.4.0",
     "esbuild": "^0.20.2",
+    "octokit": "^3.1.2",
     "tiny-glob": "^0.2.9",
     "tsup": "^8.0.2",
     "typedoc": "^0.25.12",
