--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
     "doc": {},
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "dependsOn": ["^build"]
     }
   }
 }
