--- a/lib/esbuild-plugin-react18-css/package.json
+++ b/lib/esbuild-plugin-react18-css/package.json
@@ -37,6 +37,11 @@
     "tiny-glob": "^0.2.9",
     "tsup": "^8.0.2",
     "typedoc": "^0.25.13",
+    "typedoc-plugin-inline-sources": "^1.0.2",
+    "typedoc-plugin-mdn-links": "^3.1.23",
+    "typedoc-plugin-missing-exports": "^2.2.0",
+    "typedoc-plugin-rename-defaults": "^0.7.0",
+    "typedoc-plugin-zod": "^1.1.2",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
   },
