--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,53 +1,63 @@
-name: Update dependencies and Docs
+name: Generate Docs
 
 on:
   push:
     branches: [main]
-  schedule:
-    - cron: "0 */8 * * *"
+  workflow_dispatch:
+
 jobs:
   generate-docs:
-    if: github.event.repository.owner.login == 'react18-tools'
+    if: github.run_number != 1 && github.event.repository.owner.login == 'react18-tools'
     runs-on: ubuntu-latest
     permissions:
-      packages: write
       contents: write
     steps:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: ${{ github.event.before }}
+
+      - name: Check if package.json was modified
+        id: pub
+        run: |
+          git fetch origin main && git checkout main
+          if git diff --name-only ${{ github.event.before }} HEAD | grep -q "lib/package.json"; then
+            echo "file_changed=true" >> $GITHUB_ENV
+          else
+            echo "file_changed=false" >> $GITHUB_ENV
+          fi
+
+      - name: Exit early if lib/package.json was modified
+        if: env.file_changed == 'true'
+        run: exit 1
 
       - uses: actions/setup-node@v4
         with:
           registry-url: https://registry.npmjs.org
           node-version: 20
-      - run: npm i -g pnpm && pnpm i
-        name: Install dependencies
-      - name: Build examples
-        run: pnpm build --filter esbuild-plugin-react18-css-example
-      - name: Test
-        run: npm test
-      - run: git status && git clean -f -d && git status
-        name: clean up working directory
-      - run: npx @turbo/codemod update . && pnpm update --latest -w
-        name: Update dependencies
-      - run: pnpm build
-        name: Build all apps to make sure it is not broken due to dependency upgrades
-      - name: Run unit tests
-        run: pnpm test
-      - name: Generate/update docs
-        run: |
-          sed -i -e "s/export = cssPlugin/export default cssPlugin/" ./lib/esbuild-plugin-react18-css/src/index.ts          
-          sed -i -e "s/interface/export interface/" ./lib/esbuild-plugin-react18-css/src/index.ts
-          pnpm doc
-          sed -i -e "s/export default cssPlugin/export = cssPlugin/" ./lib/esbuild-plugin-react18-css/src/index.ts
-          sed -i -e "s/export interface/interface/" ./lib/esbuild-plugin-react18-css/src/index.ts
-        continue-on-error: true
       - name: Setup Git
         run: |
           git config --global user.name "mayank1513"
           git config --global user.email "mayank.srmu@gmail.com"
           git fetch
           git checkout main
-      - name: Save upgraded packages back to repo
-        run: git add . && git commit -m "upgrade deps && docs" && git push origin main
+          git pull
+      - run: npm i -g pnpm && pnpm i --no-frozen-lockfile
+        name: Install dependencies
+      - run: git stash --include-untracked
+        name: clean up working directory
+      - name: Generate/update docs
+        run: pnpm doc
+      - name: Save docs back to repo
+        run: git add . && git commit -m "upgrade deps && docs [skip ci]" && git push origin main
+      - name: Update website
+        continue-on-error: true
+        run: |
+          gh api \
+          --method POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          /repos/mayank1513/turborepo-template/merge-upstream \
+          -f "branch=main"
+        env:
+          GH_TOKEN: ${{ secrets.mayank1513PAT }}
